# ballsurf

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt
src/: ballsurf.py  const.py  context.py  game.py  gamerect.py  image.py  score.py  sprite.py  utils.py  world.py
src/sprites/: __init__.py  background.py  ball.py  hills.py  nicholas.py  tartan.py
src/sprites/backgrounds/: __init__.py  cloud.py  grass.py  tree.py
src/sprites/balls/: __init__.py  balls.py  regular_ball.py  small_ball.py
